<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.myapp.quicknotes.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.myapp.quicknotes.ui.notes.NotesFragment"
        android:label="{folderName}">
        <argument
            android:name="folderId"
            app:argType="long" />
        <argument
            android:name="folderName"
            app:argType="string" />
    </fragment>

    <!-- noteId 0 opens a new note in the folder given by folderId. -->
    <fragment
        android:id="@+id/noteEditorFragment"
        android:name="com.myapp.quicknotes.ui.editor.NoteEditorFragment"
        android:label="@string/note">
        <argument
            android:name="noteId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="folderId"
            android:defaultValue="1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/remindersFragment"
        android:name="com.myapp.quicknotes.ui.reminders.RemindersFragment"
        android:label="@string/reminders" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.myapp.quicknotes.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>
